Normal colors for textarea on iOS, fix for textarea

--- a/style/style.css
+++ b/style/style.css
@@ -282,7 +282,12 @@ textarea {
 	transition:height 0.2s;
 }
 
-input:focus, textarea, .simpleselect .options {
+input[disabled], textarea[disabled], select[disabled='disabled'] {
+	-webkit-text-fill-color:#444;
+	-webkit-opacity:1;
+}
+
+input:focus, textarea:focus, .simpleselect .options {
 	-webkit-box-shadow:inset 0 0 1px 1px #e3e3e3;
 	-moz-box-shadow:inset 0 0 1px 1px #e3e3e3;
 	box-shadow:inset 0 0 1px 1px #e3e3e3;
